reformat backend code