@@ -1,9 +1,9 @@
 package com.smart_parking_system.backend.security;
 
 import com.smart_parking_system.backend.filter.JWTTokenValidationFilter;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.boot.autoconfigure.security.SecurityProperties;
 import org.springframework.context.annotation.Bean;
@@ -28,8 +28,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import jakarta.servlet.http.HttpServletResponse;
-import java.util.Arrays;
 import java.util.List;
 
 @Slf4j
@@ -40,44 +38,30 @@ public class SecurityConfig {
 
     private final List<String> publicPaths;
 
-    @Value("${security.enabled:true}")
-    private boolean securityEnabled;
-
     @Bean
     @Order(SecurityProperties.BASIC_AUTH_ORDER)
     @ConditionalOnProperty(name = "security.enabled", havingValue = "true", matchIfMissing = true)
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        log.info("Configuring security with authentication enabled");
-        return http.csrf((csrfConfig) -> csrfConfig.disable())
-                .cors((corsConfig) -> corsConfig.configurationSource(corsConfigurationSource()))
-                .authorizeHttpRequests((requests) -> {
-                    // Explicitly allow OPTIONS for CORS preflight
-                    requests.requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll();
+        log.info("Configuring security with authentication and CSRF enabled");
 
-                    // Use AntPathRequestMatcher to avoid MVC context path ambiguity
-                    // Add /** prefix to handle potential /sps context path or other prefixes
-                    requests.requestMatchers(
-                            new org.springframework.security.web.util.matcher.AntPathRequestMatcher("/**/api/auth/**"))
-                            .permitAll();
-                    requests.requestMatchers(
-                            new org.springframework.security.web.util.matcher.AntPathRequestMatcher("/**/api/**"))
-                            .permitAll();
-                    requests.requestMatchers(
-                            new org.springframework.security.web.util.matcher.AntPathRequestMatcher("/**/ws/**"))
-                            .permitAll();
-                    requests.requestMatchers(
-                            new org.springframework.security.web.util.matcher.AntPathRequestMatcher("/**/csrf-token"))
-                            .permitAll();
+        CsrfTokenRequestAttributeHandler requestHandler = new CsrfTokenRequestAttributeHandler();
+        requestHandler.setCsrfRequestAttributeName(null);
 
-                    requests.requestMatchers("/swagger-ui/**", "/swagger-ui.html").permitAll();
-                    requests.requestMatchers("/v3/api-docs/**").permitAll();
-                    requests.requestMatchers("/swagger-resources/**").permitAll();
+        return http
+                .csrf(csrf -> csrf
+                        .csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse())
+                        .csrfTokenRequestHandler(requestHandler)
+                        .ignoringRequestMatchers(publicPaths.toArray(String[]::new)))
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .authorizeHttpRequests(requests -> {
+                    requests.requestMatchers(HttpMethod.OPTIONS, "/**").permitAll();
+                    requests.requestMatchers(publicPaths.toArray(String[]::new)).permitAll();
                     requests.requestMatchers("/api/admins/**").hasRole("ADMIN");
                     requests.anyRequest().authenticated();
                 })
                 .addFilterBefore(new JWTTokenValidationFilter(publicPaths), BasicAuthenticationFilter.class)
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .exceptionHandling((exceptionHandling) -> exceptionHandling
+                .exceptionHandling(exception -> exception
                         .authenticationEntryPoint((request, response, authException) -> {
                             response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
                             response.setContentType("application/json");
@@ -96,18 +80,19 @@ public class SecurityConfig {
     @ConditionalOnProperty(name = "security.enabled", havingValue = "false")
     public SecurityFilterChain disabledSecurityFilterChain(HttpSecurity http) throws Exception {
         log.warn(
-                "⚠️ WARNING: Security is DISABLED! All endpoints are publicly accessible. This should NEVER be used in production!");
-        return http.csrf((csrfConfig) -> csrfConfig.disable())
-                .cors((corsConfig) -> corsConfig.configurationSource(corsConfigurationSource()))
-                .authorizeHttpRequests((requests) -> requests.anyRequest().permitAll())
+                "WARNING: Security is DISABLED! All endpoints are publicly accessible. This should NEVER be used in production!");
+
+        return http
+                .csrf(csrf -> csrf.disable())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .authorizeHttpRequests(requests -> requests.anyRequest().permitAll())
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .build();
     }
 
     @Bean
     public AuthenticationManager authenticationManagerBean(AuthenticationProvider authenticationProvider) {
-        var providerManager = new ProviderManager(authenticationProvider);
-        return providerManager;
+        return new ProviderManager(authenticationProvider);
     }
 
     @Bean
@@ -118,10 +103,10 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(Arrays.asList("*"));
-        config.setAllowedMethods(Arrays.asList("*"));
-        config.setAllowedHeaders(Arrays.asList("*"));
-        config.setExposedHeaders(Arrays.asList("*"));
+        config.setAllowedOriginPatterns(List.of("*"));
+        config.setAllowedMethods(List.of("*"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setExposedHeaders(List.of("*"));
         config.setAllowCredentials(true);
         config.setMaxAge(3600L);
 
